Fix Swagger tags syntax to match PHP 8 attributes
